# 2D_hrdrodynamic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml  pyproject.toml  run_simulation.py  setup.py
_skbuild/win-amd64-3.10/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake  hydro_model_cpp.exp  install_manifest.txt
data/: Stoker一维溃坝.poly  boundary.csv  boundary.xlsx  boundary_conditions.csv  boundary_timeseries.csv  boundary_timeseries_simple_1d.csv  dam_break.poly  dem-杭埠河.csv  river_boundary.poly  simple_1d_test.poly  still_water_on_bump.poly  test1_benchmark.poly  topography.csv  trapezoidal_weir_dam_break.poly  visualize_poly_regions.py  水位.xlsx
mesh/: generated_mesh_with_terrain.vtk  model_river.cell  model_river.node  simple_1d_test.cell  simple_1d_test.edge  simple_1d_test.node  trapezoidal_weir_dam_break.cell  trapezoidal_weir_dam_break.edge  trapezoidal_weir_dam_break.node  混合流缓流.cell  混合流缓流.edge  混合流缓流.node
output/: mesh.vtk  mesh_kriging.vtk  mesh_linear.vtk  mesh_natural.vtk  mesh_nearest.vtk
src/: 11.py  initialization.py  main.py  mesh.py  mesh_generate.py  mesh_interpolate.py  parse_poly_file.py  prepare_mesh_data.py  test.py
src/analysis/: ResultAnalyzer.py  Visualizer.py
src/data_processing/: DataProcessor.py  DataReader.py
src/hydro_model/: config.yaml  prepare_mesh_data.py  run_simulation.py
src/model/: BoundaryConditions.py  FluxCalculator.py  HydroModel.py  InitialConditions.py  MeshData.py  Reconstruction.py  SourceTerms.py  TimeIntegrator.py  WettingDrying.py  meshio_save.py
src/tools/: generate_topo_data.py  tools.py
src_cpp/: CMakeLists.txt  main.cpp
src_cpp/bindings/: bindings.cpp
src_cpp/include/: BoundaryConditionHandler_cpp.h  FluxCalculator_cpp.h  HydroModelCore_cpp.h  MeshData_cpp.h  Profiler.h  Reconstruction_cpp.h  SourceTerms_cpp.h  TimeIntegrator_cpp.h  WettingDrying_cpp.h
src_cpp/src/: BoundaryConditionHandler_cpp.cpp  FluxCalculator_cpp.cpp  HydroModelCore_cpp.cpp  MeshData_cpp.cpp  Profiler.cpp  Reconstruction_cpp.cpp  SourceTerms_cpp.cpp  TimeIntegrator_cpp.cpp  WettingDrying_cpp.cpp
tests/: test_flux_calculator_cpp.py  test_hydro_model_core_cpp.py  test_hydro_model_integration_cpp.py  test_reconstruction_cpp.py  test_source_terms_cpp.py  test_time_integrator_cpp.py  test_vfr_calculator.py  test_vfr_calculator_cpp.py
论文/: 算例.docx
